<resources>
    <string name="app_name">My Charts App</string>
    <string name="hello_text">Hello Android World!</string>
    <string name="normal_chart_button">Обычный график</string>
    <string name="iba_chart_button">IBA</string>
    <string name="exit_button">Выход</string>
    <string name="back_button">Назад</string>
    <string name="open_file_button">Открыть файл</string>
    <string name="clear_chart_button">Очистить график</string>
    <string name="sine_wave">Синусоида</string>
    <string name="open_file_toast">Открыть файл</string>
    <string name="clear_chart_toast">Очистить график</string>
    <string name="settings_button">Настройки</string>
    <string name="settings_chart_button">Настройки Графика</string>
    <string name="normal_chart_button_save">Сохранить</string>
    <string name="normal_chart_button_cancel">Отменить</string>
    <string name="mpandroid_chart_title">MPAndroidChart</string>
    <string name="mpandroid_chart_sine_wave_1">MPAndroidChart Синусоида 1</string>
    <string name="mpandroid_chart_sine_wave_2">MPAndroidChart Синусоида 2</string>
    <string name="mpandroid_chart_sine_wave_3">MPAndroidChart Синусоида 3</string>
    <string name="mpandroid_chart_sine_wave_4">MPAndroidChart Синусоида 4</string>
    <string name="mpandroid_chart_sine_wave_5">MPAndroidChart Синусоида 5</string>
    <string name="x_axis_label">X Axis</string>
    <string name="y_axis_label">Y Axis</string>
    <string name="chart_error_message">Ошибка загрузки графика: %s</string>
</resources>